--- a/libraries/native/CMakeLists.txt
+++ b/libraries/native/CMakeLists.txt
@@ -1,4 +1,12 @@
-add_subdirectory(crt)
+project(native LANGUAGES CXX ASM)
+
+if (NOT __APPLE)
+   set(CRT_ASM elf_crt.s)
+else()
+   set(CRT_ASM macho_crt.s)
+endif()
+
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-everything")
 
 file(GLOB HEADERS "*.hpp"
                   "*.h")
@@ -320,8 +328,13 @@ file ( GLOB softfloat_headers "${CMAKE_CURRENT_SOURCE_DIR}/softfloat/source/incl
                               "${CMAKE_CURRENT_SOURCE_DIR}/softfloat/build/Linux-x86_64-GCC/platform.h"
                               "${CMAKE_CURRENT_SOURCE_DIR}/softfloat/source/8086-SSE/specialize.h" )
 list( APPEND softfloat_sources ${softfloat_headers} )
-add_native_library ( native_softfloat STATIC ${softfloat_sources} )
-target_include_directories( native_softfloat PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/softfloat/source/include" "${CMAKE_CURRENT_SOURCE_DIR}/softfloat/source/8086-SSE" "${CMAKE_CURRENT_SOURCE_DIR}/softfloat/build/Linux-x86_64-GCC" )
+
+add_native_library ( native STATIC ${softfloat_sources} intrinsics.cpp crt/crt.cpp crt/${CRT_ASM} )
+target_include_directories( native PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/softfloat/source/include" "${CMAKE_CURRENT_SOURCE_DIR}/softfloat/source/8086-SSE" "${CMAKE_CURRENT_SOURCE_DIR}/softfloat/build/Linux-x86_64-GCC" crt ${CMAKE_SOURCE_DIR})
 
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/softfloat/source/include DESTINATION ${BASE_BINARY_DIR}/include/native FILES_MATCHING PATTERN "*.h" PATTERN "*.hpp")
-add_custom_command( TARGET native_softfloat POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:native_softfloat> ${BASE_BINARY_DIR}/lib )
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR} DESTINATION ${BASE_BINARY_DIR}/include/native FILES_MATCHING PATTERN "*.h" PATTERN "*.hpp")
+
+add_dependencies(native native_eosio)
+
+add_custom_command( TARGET native POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:native> ${BASE_BINARY_DIR}/lib )
