--- a/libraries/eosiolib/CMakeLists.txt
+++ b/libraries/eosiolib/CMakeLists.txt
@@ -31,14 +31,10 @@ target_include_directories(native_eosio PUBLIC
 
 target_link_libraries( eosio c c++ )
 target_link_libraries( native_eosio native_c native_c++ )
+add_dependencies( native_eosio eosio )
 
-file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/../eosiolib DESTINATION ${BASE_BINARY_DIR}/preinclude FILES_MATCHING PATTERN "*.h" PATTERN "*.hpp")
 
 add_custom_command( TARGET eosio POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:eosio> ${BASE_BINARY_DIR}/lib )
 add_custom_command( TARGET native_eosio POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:native_eosio> ${BASE_BINARY_DIR}/lib )
 
-add_custom_command( TARGET eosio PRE_BUILD COMMAND rm -rf ${BASE_BINARY_DIR}/include/eosiolib )
-add_custom_command( TARGET native_eosio PRE_BUILD COMMAND rm -rf ${BASE_BINARY_DIR}/include/eosiolib )
-
-add_custom_command( TARGET eosio POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${BASE_BINARY_DIR}/preinclude/* ${BASE_BINARY_DIR}/include )
-add_custom_command( TARGET native_eosio POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${BASE_BINARY_DIR}/preinclude/* ${BASE_BINARY_DIR}/include )
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/../eosiolib DESTINATION ${BASE_BINARY_DIR}/include FILES_MATCHING PATTERN "*.h" PATTERN "*.hpp")
