--- a/modules/EosioWasmToolchain.cmake.in
+++ b/modules/EosioWasmToolchain.cmake.in
@@ -1,8 +1,8 @@
 message(STATUS "Setting up Eosio Wasm Toolchain @VERSION_MAJOR@.@VERSION_MINOR@.@VERSION_PATCH@ at @CDT_ROOT_DIR@")
+
 if (NOT EOSIO_WASM_OLD_BEHAVIOR STREQUAL "On")
     set(CMAKE_SYSTEM_NAME Generic)
     set(CMAKE_SYSTEM_PROCESSOR wasm)
-
     set(CMAKE_CROSSCOMPILING 1)
     set(CMAKE_C_COMPILER_WORKS 1)
     set(CMAKE_CXX_COMPILER_WORKS 1)
@@ -28,7 +28,7 @@ if (NOT EOSIO_WASM_OLD_BEHAVIOR STREQUAL "On")
     set(CMAKE_EXECUTABLE_SUFFIX_C ".wasm")
     set(CMAKE_EXECUTABLE_SUFFIX_CXX ".wasm")
 
-    set(CMAKE_FIND_ROOT_PATH "@CDT_ROOT@/eosio")
+    set(CMAKE_FIND_ROOT_PATH "@CDT_ROOT_DIR@")
     set(CMAKE_FIND_ROOT_PATH_MODE_PROGRAM NEVER)
     set(CMAKE_FIND_ROOT_PATH_MODE_LIBRARY ONLY)
     set(CMAKE_FIND_ROOT_PATH_MODE_INCLUDE ONLY)
@@ -40,21 +40,3 @@ set(ABIGEN "@CDT_ROOT_DIR@/bin/eosio-abigen")
 # hack for OSX
 set(CMAKE_OSX_SYSROOT="@SYSROOT_DIR@")
 set(CMAKE_OSX_DEPLOYMENT_TARGET="")
-
-if (NOT EOSIO_WASM_OLD_BEHAVIOR STREQUAL "On")
-    macro(add_contract CONTRACT_NAME TARGET)
-        add_executable( ${TARGET} ${ARGN} )
-        target_compile_options( ${TARGET} PUBLIC -abigen )
-        get_target_property(BINOUTPUT ${TARGET} BINARY_DIR)
-        target_compile_options( ${TARGET} PUBLIC -abigen_output=${BINOUTPUT}/${TARGET}.abi )
-        target_compile_options( ${TARGET} PUBLIC -contract ${CONTRACT_NAME} )
-    endmacro()
-else()
-    macro(add_contract CONTRACT_NAME TARGET)
-        add_executable( ${TARGET}.wasm ${ARGN} )
-        target_compile_options( ${TARGET}.wasm PUBLIC -abigen )
-        get_target_property(BINOUTPUT ${TARGET}.wasm BINARY_DIR)
-        target_compile_options( ${TARGET}.wasm PUBLIC -abigen_output=${BINOUTPUT}/${TARGET}.abi )
-        target_compile_options( ${TARGET}.wasm PUBLIC -contract ${CONTRACT_NAME} )
-    endmacro()
-endif()
