--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,5 +1,3 @@
-enable_testing()
-
 set(unit_test_dir ${CMAKE_BINARY_DIR}/EosioWasmTests-prefix/src/EosioWasmTests-build)
 
-add_test(name_tests ${unit_test_dir}/name_tests.wasm)
+add_test(name_tests ${unit_test_dir}/name_tests)
