--- a/examples/hello/CMakeLists.txt
+++ b/examples/hello/CMakeLists.txt
@@ -1,10 +1,17 @@
-cmake_minimum_required(VERSION 3.5)
-project(hello_example VERSION 1.0.0)
+include(ExternalProject)
+# if no cdt root is given use default path
+if(EOSIO_CDT_ROOT STREQUAL "" OR NOT EOSIO_CDT_ROOT)
+   find_package(eosio.cdt)
+endif()
 
-find_package(eosio.cdt)
-
-### Generate the wasm and abi
-add_contract( hello hello hello.cpp )
-
-### add the path to where the ricardian contracts/clauses are found
-target_compile_options( hello.wasm PUBLIC -R${CMAKE_CURRENT_SOURCE_DIR} )
+ExternalProject_Add(
+   hello_project
+   SOURCE_DIR ${CMAKE_SOURCE_DIR}/src
+   BINARY_DIR ${CMAKE_BINARY_DIR}/hello
+   CMAKE_ARGS -DCMAKE_TOOLCHAIN_FILE=${EOSIO_CDT_ROOT}/lib/cmake/eosio.cdt/EosioWasmToolchain.cmake
+   UPDATE_COMMAND ""
+   PATCH_COMMAND ""
+   TEST_COMMAND ""
+   INSTALL_COMMAND ""
+   BUILD_ALWAYS 1
+)
