--- a/modules/EosioWasmToolchain.cmake.in
+++ b/modules/EosioWasmToolchain.cmake.in
@@ -1,4 +1,4 @@
-message(STATUS "Setting up Eosio Wasm Toolchain @VERSION_MAJOR@.@VERSION_MINOR@.@VERSION_PATCH@ at @CDT_ROOT_DIR@")
+message(STATUS "Setting up Eosio Wasm Toolchain @VERSION_FULL@ at @CDT_ROOT_DIR@")
 
 if (NOT EOSIO_WASM_OLD_BEHAVIOR STREQUAL "On")
     set(CMAKE_SYSTEM_NAME Generic)
@@ -8,8 +8,8 @@ if (NOT EOSIO_WASM_OLD_BEHAVIOR STREQUAL "On")
     set(CMAKE_CXX_COMPILER_WORKS 1)
 endif()
   
-set(EOSIO_CDT_VERSION "@VERSION_MAJOR@.@VERSION_MINOR@.@VERSION_PATCH@")
-set(EOSIO_WASMSDK_VERSION "@VERSION_MAJOR@.@VERSION_MINOR@.@VERSION_PATCH@")
+set(EOSIO_CDT_VERSION "@VERSION_FULL@")
+set(EOSIO_WASMSDK_VERSION "@VERSION_FULL@")
 
 set(CMAKE_C_COMPILER "@CDT_ROOT_DIR@/bin/eosio-cc")
 set(CMAKE_CXX_COMPILER "@CDT_ROOT_DIR@/bin/eosio-cpp")
