--- a/scripts/generate_package.sh.in
+++ b/scripts/generate_package.sh.in
@@ -2,7 +2,7 @@
 
 VARIANT=$1
 
-VERSION="@VERSION_MAJOR@.@VERSION_MINOR@.@VERSION_PATCH@"
+VERSION="@VERSION_FULL@"
 
 BUILD_DIR="@CMAKE_BINARY_DIR@"
 
