--- a/scripts/generate_package.sh.in
+++ b/scripts/generate_package.sh.in
@@ -2,6 +2,8 @@
 
 VARIANT=$1
 
+VERSION_NO_SUFFIX="@VERSION_MAJOR@.@VERSION_MINOR@.@VERSION_PATCH@"
+VERSION_SUFFIX="@VERSION_SUFFIX@"
 VERSION="@VERSION_FULL@"
 
 BUILD_DIR="@CMAKE_BINARY_DIR@"
@@ -13,6 +15,8 @@ URL="@URL@"
 EMAIL="@EMAIL@"
 
 export BUILD_DIR
+export VERSION_NO_SUFFIX
+export VERSION_SUFFIX
 export VERSION
 export VENDOR
 export PROJECT
