starting new malloc and rope

--- a/libraries/eosiolib/CMakeLists.txt
+++ b/libraries/eosiolib/CMakeLists.txt
@@ -3,11 +3,13 @@ file(GLOB HEADERS "*.hpp"
 
 add_library(eosio
             eosiolib.cpp
+            memory.cpp
             crypto.cpp
             ${HEADERS})
 
 add_native_library(native_eosio
                    eosiolib.cpp
+                   memory.cpp
                    crypto.cpp
                    ${HEADERS})
 
@@ -32,7 +34,6 @@ target_include_directories(native_eosio PUBLIC
 target_link_libraries( eosio c c++ )
 target_link_libraries( native_eosio native_c native_c++ )
 add_dependencies( native_eosio eosio )
-
 
 add_custom_command( TARGET eosio POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:eosio> ${BASE_BINARY_DIR}/lib )
 add_custom_command( TARGET native_eosio POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:native_eosio> ${BASE_BINARY_DIR}/lib )
