--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -3,5 +3,6 @@ include(EosioCDTMacros)
 
 add_native_executable(name_tests name_tests.cpp)
 add_native_executable(system_tests system_tests.cpp)
-add_dependencies(name_tests EosioTools)
-add_dependencies(system_tests EosioTools)
+add_native_executable(malloc_tests test_contracts/malloc_tests.cpp)
+
+add_subdirectory(test_contracts)
