added support for configurable exports for wasm output, also fixed cmake to build in different dirs

--- a/tools/include/compiler_options.hpp.in
+++ b/tools/include/compiler_options.hpp.in
@@ -699,8 +699,10 @@ static Options CreateOptions(bool add_defaults=true) {
 #else
    if (fnative_opt)
       ldopts.emplace_back("-lnative_c++ -lnative_c -lnative_eosio -lnative");
-   else
+   else {
       ldopts.emplace_back("-lc++ -lc -leosio");
+      ldopts.emplace_back("--only-export \"apply:function\"");
+   }
 #endif
    return {output_fn, abigen_inputs.str(), inputs, link, abigen, pp_dir, abigen_output, abigen_contract, copts, ldopts, agopts, agresources, fnative_opt};
 }
