--- a/tests/integration/contracts.hpp.in
+++ b/tests/integration/contracts.hpp.in
@@ -6,6 +6,9 @@ namespace eosio { namespace testing {
 struct contracts {
    static std::vector<uint8_t> malloc_tests_wasm() { return read_wasm("${CMAKE_BINARY_DIR}/../unit/test_contracts/malloc_tests.wasm"); }
    static std::vector<char>    malloc_tests_abi() { return read_abi("${CMAKE_BINARY_DIR}/../unit/test_contracts/malloc_tests.abi"); }
+   static std::vector<uint8_t> rope_tests_wasm() { return read_wasm("${CMAKE_BINARY_DIR}/../unit/test_contracts/rope_tests.wasm"); }
+   static std::vector<char>    rope_tests_abi() { return read_abi("${CMAKE_BINARY_DIR}/../unit/test_contracts/rope_tests.abi"); }
+
 };
 
 }} //ns eosio::testing
