fix some issues and add CHECK_PRINT/REQUIRE_PRINT

--- a/examples/hello/CMakeLists.txt
+++ b/examples/hello/CMakeLists.txt
@@ -15,3 +15,20 @@ ExternalProject_Add(
    INSTALL_COMMAND ""
    BUILD_ALWAYS 1
 )
+
+ExternalProject_Add(
+   hello_tests_project
+   SOURCE_DIR ${CMAKE_SOURCE_DIR}/tests
+   BINARY_DIR ${CMAKE_BINARY_DIR}/tests
+   CMAKE_ARGS -DCMAKE_TOOLCHAIN_FILE=${EOSIO_CDT_ROOT}/lib/cmake/eosio.cdt/EosioWasmToolchain.cmake
+   UPDATE_COMMAND ""
+   PATCH_COMMAND ""
+   TEST_COMMAND ""
+   INSTALL_COMMAND ""
+   BUILD_ALWAYS 1
+)
+
+### add a new test
+include (CTest)
+enable_testing()
+add_test(hello_test ${CMAKE_BINARY_DIR}/tests/hello_test)
