--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -115,7 +115,7 @@ steps:
     
   - command: | # Ubuntu 18.04 Unit Tests
       echo "--- :arrow_down: Downloading build directory" && \
-      buildkite-agent artifact download "build.tar.gz" . --step ":ubuntu: 18.04 Build" && \
+      buildkite-agent artifact download "build.tar.gz" . --step ":ubuntu: Ubuntu 18.04 Build" && \
       tar -zxf build.tar.gz && \
       echo "+++ :microscope: Running unit tests on Ubuntu" && \
       cd build && \
@@ -131,7 +131,7 @@ steps:
 
   - command: | # Fedora Unit Tests
       echo "--- :arrow_down: Downloading build directory" && \
-      buildkite-agent artifact download "build.tar.gz" . --step ":fedora: Build" && \
+      buildkite-agent artifact download "build.tar.gz" . --step ":fedora: Fedora Build" && \
       tar -zxf build.tar.gz && \
       echo "+++ :microscope: Running unit tests on Fedora" && \
       cd build && \
@@ -147,7 +147,7 @@ steps:
 
   - command: | # CentOS Unit Tests
       echo "--- :arrow_down: Downloading build directory" && \
-      buildkite-agent artifact download "build.tar.gz" . --step ":centos: Build" && \
+      buildkite-agent artifact download "build.tar.gz" . --step ":centos: CentOS Build" && \
       tar -zxf build.tar.gz && \
       echo "+++ :microscope: Running unit tests on CentOS" && \
       cd build && \
@@ -163,7 +163,7 @@ steps:
   
   - command: | # Amazon Unit Tests
       echo "--- :arrow_down: Downloading build directory" && \
-      buildkite-agent artifact download "build.tar.gz" . --step ":aws: Build" && \
+      buildkite-agent artifact download "build.tar.gz" . --step ":aws: Amazon AWS Build" && \
       tar -zxf build.tar.gz && \
       echo "+++ :microscope: Running unit tests on Amazon AWS" && \
       cd build && \
@@ -210,7 +210,7 @@ steps:
 
   - command: | # Ubuntu Packaging
         echo "--- :arrow_down: Downloading build directory" && \
-        buildkite-agent artifact download "build.tar.gz" . --step ":ubuntu: 18.04 Build" && \
+        buildkite-agent artifact download "build.tar.gz" . --step ":ubuntu: Ubuntu 18.04 Build" && \
         tar -zxf build.tar.gz && \
         echo "+++ :package: Starting package build" && \
         cd /data/job/build/packages && bash generate_package.sh deb
@@ -230,7 +230,7 @@ steps:
 
   - command: | # Fedora Packaging
         echo "--- :arrow_down: Downloading build directory" && \
-        buildkite-agent artifact download "build.tar.gz" . --step ":fedora: Build" && \
+        buildkite-agent artifact download "build.tar.gz" . --step ":fedora: Fedora Build" && \
         tar -zxf build.tar.gz && \
         echo "+++ :package: Starting package build" && \
         yum install -y rpm-build && \
@@ -257,7 +257,7 @@ steps:
 
   - command: | # CentOS Packaging
         echo "--- :arrow_down: Downloading build directory" && \
-        buildkite-agent artifact download "build.tar.gz" . --step ":centos: Build" && \
+        buildkite-agent artifact download "build.tar.gz" . --step ":centos: CentOS Build" && \
         tar -zxf build.tar.gz && \
         echo "+++ :package: Starting package build" && \
         yum install -y rpm-build && \
@@ -287,7 +287,7 @@ steps:
 
   - command: | # Docker Build
         echo "--- :arrow_down: Downloading package" && \
-        buildkite-agent artifact download "build/packages/*.deb" docker/dev/. --step ":ubuntu: 18.04 Package builder" && \
+        buildkite-agent artifact download "build/packages/*.deb" docker/dev/. --step ":ubuntu: Ubuntu 18.04 Package Builder" && \
         echo "--- :key: AUTHENTICATING GOOGLE SERVICE ACCOUNT" && \
         gcloud --quiet auth activate-service-account b1-automation-svc@b1-automation-dev.iam.gserviceaccount.com --key-file=/etc/gcp-service-account.json && \
         docker-credential-gcr configure-docker && \
