added rope tests

--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -3,6 +3,7 @@ include(EosioCDTMacros)
 
 add_native_executable(name_tests name_tests.cpp)
 add_native_executable(system_tests system_tests.cpp)
+add_native_executable(rope_tests rope_tests.cpp)
 add_native_executable(tree_tests tree_tests.cpp)
 add_native_executable(malloc_tests test_contracts/malloc_tests.cpp)
 
