--- a/tests/unit/test_contracts/CMakeLists.txt
+++ b/tests/unit/test_contracts/CMakeLists.txt
@@ -1,1 +1,4 @@
 add_contract(malloc_tests malloc_tests malloc_tests.cpp)
+add_contract(malloc_tests old_malloc_tests malloc_tests.cpp)
+
+target_link_libraries(old_malloc_tests PUBLIC --use-freeing-malloc)
