--- a/tools/cc/eosio-cpp.cpp.in
+++ b/tools/cc/eosio-cpp.cpp.in
@@ -54,7 +54,7 @@ int main(int argc, const char **argv) {
       std::vector<std::string> new_opts = opts.comp_options;
       SmallString<64> res;
       llvm::sys::path::system_temp_directory(true, res);
-      std::string tmp_file = std::string(res.c_str())+"/"+input+"-tmp.cpp";
+      std::string tmp_file = std::string(res.c_str())+"/"+llvm::sys::path::filename(input).str()+"-tmp.cpp";
       std::string output;
 
       if (llvm::sys::fs::exists(tmp_file)) {
