--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,5 +1,10 @@
 set(unit_test_dir ${CMAKE_BINARY_DIR}/EosioWasmTests-prefix/src/EosioWasmTests-build)
 
+add_test(asset_tests ${unit_test_dir}/asset_tests)
+add_test(eosio_tests ${unit_test_dir}/eosio_tests)
 add_test(name_tests ${unit_test_dir}/name_tests)
-add_test(system_tests ${unit_test_dir}/system_tests)
 add_test(print_tests ${unit_test_dir}/print_tests)
+add_test(symbol_tests ${unit_test_dir}/symbol_tests)
+add_test(system_tests ${unit_test_dir}/system_tests)
+add_test(time_tests ${unit_test_dir}/time_tests)
+add_test(varint_tests ${unit_test_dir}/varint_tests)
