--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -1,9 +1,15 @@
 list(APPEND CMAKE_MODULE_PATH ${EOSIO_CDT_BIN})
 include(EosioCDTMacros)
 
+add_native_executable(asset_tests asset_tests.cpp)
+add_native_executable(eosio_tests eosio_tests.cpp)
 add_native_executable(name_tests name_tests.cpp)
-add_native_executable(system_tests system_tests.cpp)
 add_native_executable(print_tests print_tests.cpp)
+add_native_executable(symbol_tests symbol_tests.cpp)
+add_native_executable(system_tests system_tests.cpp)
+add_native_executable(time_tests time_tests.cpp)
+add_native_executable(varint_tests varint_tests.cpp)
+
 add_dependencies(name_tests EosioTools)
 add_dependencies(system_tests EosioTools)
 add_dependencies(print_tests EosioTools)
